fix positions on smaller iphones and phones

--- a/src/styles/items/hero.scss
+++ b/src/styles/items/hero.scss
@@ -29,7 +29,7 @@
     }
     
     .socialicons {
-        margin-top: 10px;
+        margin-top: 15px;
     }
 
     .arrow {
